--- a/spring_web/src/main/resources/application.properties
+++ b/spring_web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/project_web
+spring.datasource.url=jdbc:mysql://localhost:3306/web
 spring.datasource.username=web
 spring.datasource.password=1234
 server.port=80
