--- a/spring_web/src/main/resources/application.properties
+++ b/spring_web/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/web?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=web
+spring.datasource.username=spring
 spring.datasource.password=1234
 server.port=80
 spring.mvc.view.prefix=/WEB-INF/views/
